--- a/A1.ipynb
+++ b/A1.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Extractive Text Summarization by Sentence Ranking using 1, 2 and 3-grams weights\n",
     "\n",
-    "We will do 3 sentence rankings using 1-gram, 2-gram and 3-gram weights respectively. And combine them for an overall ranking of sentences of a text corpus.\n",
+    "Generally, frequency of n-grams (other than stop words) in a document is indicative of its importance in communicating its content. By corollary, presence of high frequency n-grams in a sentence would indicate importance of that sentence. We will do 3 sentence rankings using 1-gram, 2-gram and 3-gram weights respectively. And combine them for an overall ranking of sentences of a text corpus.\n",
     "\n",
     "First start with necessary imports"
    ]
@@ -603,6 +603,35 @@
     "    sentenceANDweight = [raw_sentences[i], weight]\n",
     "    sentence_weight.append(sentenceANDweight)\n",
     "sentence_weight = sorted(sentence_weight, key=lambda a_entry: a_entry[1], reverse = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['Later that day, The Observer published the story of Cambridge Analytica’s misuse of Facebook data, which sent shockwaves around the world, caused millions to #DeleteFacebook, and led the UK Information Commissioner’s Office to fine the site the maximum penalty for failing to protect users’ information.',\n",
+       "  230],\n",
+       " ['In these, it says it banned Wylie because, like Cambridge Analytica, he received a copy of the quiz’s Facebook data, which was a breach of Facebook’s terms and conditions.',\n",
+       "  229],\n",
+       " ['Some conservatives have argued that the Trump campaign has been unfairly criticised for its use of data, while former President Barack Obama and his digital agency Blue State Digital were lauded for their use of social-media data in his successful 2008 election campaign.',\n",
+       "  219],\n",
+       " ['The political battlefield\\nA quick refresher on the scandal, in Wylie’s words: Cambridge Analytica was a company spun out of SCL Group, a British military contractor that worked in information operations for armed forces around the world.',\n",
+       "  190],\n",
+       " ['As director of research, Wylie’s original role was to map out how the company would take traditional information operations tactics into the online space – in particular, by profiling people who would be susceptible to certain messaging.',\n",
+       "  177]]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentence_weight[:5]"
    ]
   },
   {
